# netspd

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
assets/themes/: catppuccin.toml  default.toml  dracula.toml  gruvbox.toml  light.toml  monokai.toml  nord.toml  solarized-dark.toml  tokyo-night.toml
config/: config.toml
examples/: embed.rs
packaging/: README.md
packaging/aur/: PKGBUILD
packaging/github-action/: README.md  action.yml
packaging/scoop/: netspd.json
packaging/winget/: TarunVishwakarma1.netspd.installer.yaml  TarunVishwakarma1.netspd.locale.en-US.yaml  TarunVishwakarma1.netspd.yaml
src/: lib.rs  main.rs
src/app/: action.rs  app.rs  cli.rs  controller.rs  event.rs  headless.rs  history.rs  mod.rs  notify.rs  prom.rs  score.rs  screen.rs  serve.rs  share.rs  state.rs  verdict.rs  views.rs
src/config/: loader.rs  mod.rs  settings.rs
src/engine/: engine.rs  event.rs  mod.rs  scheduler.rs
src/engine/metrics/: ema.rs  latency.rs  mod.rs  sampler.rs  statistics.rs  throughput.rs
src/engine/models/: mod.rs  phase.rs  progress.rs  report.rs  server.rs
src/engine/network/: client.rs  download.rs  health.rs  icmp.rs  info.rs  loaded_latency.rs  mod.rs  ping.rs  transfer.rs  upload.rs
src/engine/providers/: custom.rs  fast.rs  librespeed.rs  mod.rs  ookla.rs
src/errors/: config.rs  engine.rs  mod.rs
src/tui/: animation.rs  glyphs.rs  layout.rs  mod.rs  renderer.rs  terminal.rs  theme.rs  theme_registry.rs  wallpaper.rs
src/tui/screens/: error.rs  help.rs  mod.rs  results.rs  server_select.rs  settings.rs  splash.rs  testing.rs  theme_select.rs  trends.rs
src/tui/widgets/: completion.rs  dial_gauge.rs  digits.rs  download_card.rs  error_popup.rs  footer.rs  header.rs  help_popup.rs  mod.rs  ping_card.rs  progress_bar.rs  speed_gauge.rs  spinner.rs  status_bar.rs  transfer_card.rs  upload_card.rs
src/utils/: duration.rs  format.rs  mod.rs
tests/: bufferbloat.rs  cli.rs  config.rs  dial.rs  duration.rs  errors.rs  format.rs  health.rs  histogram.rs  history.rs  icmp.rs  metrics.rs  prom.rs  provider.rs  providers_extra.rs  score.rs  serve.rs  share.rs  speed_tiers.rs  spring.rs  state_ui.rs  theme.rs  verdict.rs
tests/common/: mod.rs
web/: index.html
